--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <div class="box">
-  <div class = "text-center">
+  <div class="container-fluid text-center">
     <h1>FreeCodeCamp Weather App</h1>
     <br><br>
   </div>
@@ -38,7 +38,8 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" type="text/javascript"></script>
-  <script src="/main.js" type="text/javascript"></script>
+
+<!-- Github pages does not allow linking to internal .js files.  -->
 <script>
   //find browser lattitude and langitude
 if (navigator.geolocation) {
